--- a/src/app/contacts-list/contacts-list.component.html
+++ b/src/app/contacts-list/contacts-list.component.html
@@ -1,4 +1,4 @@
-<!--<trm-contacts-header></trm-contacts-header>
+<trm-contacts-header></trm-contacts-header>
 
 <ul class="collection">
   <li *ngFor="let contact of contacts" class="collection-item avatar">
@@ -6,5 +6,3 @@
     <span class="title">{{contact.name}}</span>
   </li>
 </ul>
--->
-<router-outlet></router-outlet>
